<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UserSettingActivity">


    <!--logo-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>
    <!--logo-->





    <!--Nav Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/TextViewPass"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:text="@string/newPass"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/CurrentPass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/newPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/ConfirmPass"
            android:inputType="textPassword" />

        <!-- Update Password Button -->
        <Button
            android:id="@+id/btnUpdatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/UpdatePassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!--home-->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Home"
            app:srcCompat="@drawable/home"
            tools:ignore="MissingConstraints" />

        <!-- Add space between icons -->
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--search-->
        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Search"
            app:srcCompat="@drawable/search"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--favorite-->
        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Favorite"
            app:srcCompat="@drawable/favorite"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--profile-->
        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Profile"
            app:srcCompat="@drawable/profile"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--admin-->
        <ImageButton
            android:id="@+id/adminButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Admin"
            android:visibility="gone"
            app:srcCompat="@drawable/admin"
            tools:ignore="MissingConstraints" />


    </LinearLayout>
    <!--Nav Bar-->


</LinearLayout>