<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <!--logo-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>
    <!--logo-->

    <!--Main-Profile-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="206dp">

        <!--loguot-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:text="@string/LogOut"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:backgroundTint="@color/primaryColor"
            app:strokeColor="@color/primaryLightColor"
            app:strokeWidth="2dp" />










        <!--Setting-->

        <!--loguot-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="110dp"
            android:layout_gravity="end"
            android:padding="12dp"
            android:text="@string/newPass"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:backgroundTint="@color/primaryColor"
            app:strokeColor="@color/primaryLightColor"
            app:strokeWidth="2dp" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="206dp">


        <!--location-->
        <ImageView
            android:id="@+id/location"
            android:layout_width="43dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/location"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="152dp"
            android:layout_height="24dp"
            android:text="@string/Yourlocation"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="148dp"
            android:layout_gravity="center"
            android:layout_height="23dp"
            android:text="@string/Yourlocation"
            tools:ignore="MissingConstraints" />
        <!--location-->


        <EditText
            android:id="@+id/bugEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message" />

        <Button
            android:id="@+id/bugBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contact" />
        <!--Setting-->
    </LinearLayout>
    <!--Main-Profile-->

    <!--Nav Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!--home-->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Home"
            app:srcCompat="@drawable/home"
            tools:ignore="MissingConstraints" />

        <!-- Add space between icons -->
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--search-->
        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Search"
            app:srcCompat="@drawable/search"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--favorite-->
        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Favorite"
            app:srcCompat="@drawable/favorite"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--profile-->
        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Profile"
            app:srcCompat="@drawable/profile"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--admin-->
        <ImageButton
            android:id="@+id/adminButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Admin"
            android:visibility="gone"
            app:srcCompat="@drawable/admin"
            tools:ignore="MissingConstraints" />


    </LinearLayout>
    <!--Nav Bar-->

    <!--Nav Bar-->


</LinearLayout>