<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <!--logo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>
    <!--logo-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- AutoCompleteTextView -->
        <AutoCompleteTextView
            android:id="@+id/trailAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/searchHint"
            android:padding="12dp"
            android:background="@drawable/rounded_background"
            android:textColor="@color/black" />

        <!-- North Button -->
        <Button
            android:id="@+id/buttonNorth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/turquoise"
            android:text="@string/North"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <!-- North Spinner -->
        <Spinner
            android:id="@+id/NorthSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/rounded_background"
            android:visibility="invisible" />

        <!-- Center Button -->
        <Button
            android:id="@+id/buttonCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/turquoise"
            android:text="@string/Center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <!-- Center Spinner -->
        <Spinner
            android:id="@+id/CenterSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/rounded_background"
            android:visibility="invisible" />

        <!-- South Button -->
        <Button
            android:id="@+id/buttonSouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/turquoise"
            android:text="@string/South"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <!-- South Spinner -->
        <Spinner
            android:id="@+id/SouthSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/rounded_background"
            android:visibility="invisible" />

    </LinearLayout>





    <!--Nav Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center">

        <!--home-->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Home"
            app:srcCompat="@drawable/home"
            tools:ignore="MissingConstraints" />

        <!-- Add space between icons -->
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--search-->
        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Search"
            app:srcCompat="@drawable/search"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--favorite-->
        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Favorite"
            app:srcCompat="@drawable/favorite"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--profile-->
        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Profile"
            app:srcCompat="@drawable/profile"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--admin-->
        <ImageButton
            android:id="@+id/adminButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Admin"
            android:visibility="gone"
            app:srcCompat="@drawable/admin"
            tools:ignore="MissingConstraints" />


    </LinearLayout>
    <!--Nav Bar-->

</LinearLayout>