<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".AdminActivity">





    <!--logo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>
    <!--logo-->
<!--Body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/updateAdmin"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/adminSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@drawable/spinner_dropdown_background"
            android:background="@drawable/spinner_background"
            android:spinnerMode="dropdown"
            android:dropDownWidth="match_parent"
            android:padding="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/reportBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/report" />

        <Button
            android:id="@+id/bugsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bugs" />
    </LinearLayout>
<!--Body-->





    <!--Nav Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!--home-->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Home"
            app:srcCompat="@drawable/home"
            tools:ignore="MissingConstraints" />

        <!-- Add space between icons -->
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--search-->
        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Search"
            app:srcCompat="@drawable/search"
            tools:ignore="MissingConstraints" />

        <!--favorite-->
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Favorite"
            app:srcCompat="@drawable/favorite"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <!--profile-->
        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Profile"
            app:srcCompat="@drawable/profile"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/adminButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Admin"
            android:visibility="gone"
            app:srcCompat="@drawable/admin"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
    <!--Nav Bar-->


</LinearLayout>